# hello-rust

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  vercel.json
api/: Cargo.toml  _util.rs  user.rs
src/: main.rs
