[package]
name = "hello_rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "8"
serde_json = "1.0"
http = "0.1"
vercel_lambda = "*"
futures = "0.3"
firebase_jwt_rs = "0.1.2"

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.reqwest]
  version = "0.11.13"
  features = [ "json" ]

  [dependencies.tokio]
  version = "1"
  features = [ "full" ]

[lib]
name = "util"
path = "_util.rs"